--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
 
 <body>
   <video playsinline autoplay muted loop id="bgvid">
-    <source src="assets/images/bg.mp4" type="video/mp4">
+    <source src="assets/images/bg_video.mp4" type="video/mp4">
   </video>
   <app-root></app-root>
 </body>
