--- a/src/index.html
+++ b/src/index.html
@@ -11,9 +11,9 @@
 </head>
 
 <body>
-  <video autoplay muted loop playsinline preload="auto" onloadedmetadata="this.muted = true" id="bgvid">
+  <!-- <video autoplay muted loop playsinline preload="auto" onloadedmetadata="this.muted = true" id="bgvid">
     <source src="assets/images/bg_video.mp4" type="video/mp4">
-  </video>
+  </video> -->
   <app-root></app-root>
 </body>
 </html>
